--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.447.0",
+    "lucide-react": "^0.462.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
@@ -39,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "recharts": "^2.13.3",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.3",
