--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.462.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.7.15",
     "qrcode": "^1.5.4",
     "query-string": "^9.1.1",
     "react": "^18",
